<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home"
            android:icon="@drawable/inicio"/>


        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery"
            android:icon="@drawable/editar_infromacion"/>
        <item
        android:id="@+id/terminos1"
        android:title="@string/lblterminos" />
        <item
            android:id="@+id/mainActivity2"
            android:title="@string/menu_slideshow"
            android:icon="@drawable/cerrar_sesion"/>

    </group>
</menu>
