<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nav_home_2">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="161dp"
        android:layout_height="155dp"
        android:layout_marginTop="40dp"
        android:src="@mipmap/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/btneliminar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/btneliminar"
        android:layout_width="230dp"
        android:layout_height="58dp"
        android:layout_marginBottom="60dp"
        android:background="#fff"
        android:text="@string/btneliminar"
        android:textColor="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/btnmostrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnmostrar"
        android:layout_width="230dp"
        android:layout_height="58dp"
        android:layout_marginBottom="60dp"
        android:background="#fff"
        android:text="@string/btnmostrar"
        android:textColor="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/btnbuscarusu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnbuscarusu"
        android:layout_width="230dp"
        android:layout_height="58dp"
        android:layout_marginBottom="128dp"
        android:background="#fff"
        android:text="@string/btnbuscarusu"
        android:textColor="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>